# codeqa

./: .env  .gitignore  LICENSE  README.md  demo.py  pyproject.toml  repo_index_readme.md  run_analysis.py
benchmark/: run.py  run_moatless.py  run_rag.py  run_swe.py
code_aot/: atom.py  llm.py  prompt_generator.py  score.py  search.py  solve.py  utils.py
dataset/: tmp.txt
dataset/generated_answers/: django_answers.jsonl  example.jsonl  finerac_answers.jsonl  generated_answers_moatless_agent_flask.jsonl  generated_answers_moatless_agent_flask_2.jsonl  generated_answers_rag_agent_flask.jsonl  generated_answers_rag_agent_flask.jsonl.bak  generated_answers_rag_agent_flask_2.jsonl  generated_answers_rag_agent_flask_new.jsonl  sympy_answers.jsonl
dataset/generated_questions/: django_questions.jsonl  fineract_questions.jsonl  generated_questions_moatless_agent_django.jsonl  generated_questions_moatless_agent_flask.jsonl  generated_questions_moatless_agent_flask_2.jsonl  generated_questions_moatless_agent_flask_2_function.jsonl  sympy_questions.jsonl
dataset/score/: result.jsonl  result_2.jsonl
dataset/seed_questions/: Api.txt  Api_Undirect.txt  High-Level.txt  How.txt  Rule.txt  What.txt  Where.txt  generated_questions.json
examples/: test_code_analyzer.py
examples/code_aot/: run_single.py
examples/direct_llm/: answer_questions.py  direct_llm.py
finetune/: create_data.py  load.py  prompt.py
format/: code_formatting.py
moatless_qa/: Readme.md  expander.py  file_context.py  message_history.py  moatless_solve.py  node.py  requirements_more.txt
qa_statistics/: draw_question_distribution.py
repo_analysis/: 20250624_000748_classes.json  20250624_000748_code_nodes.json  20250624_000748_functions.json  20250624_000748_modules.json  20250624_000748_relationships.json  20250729_170249_classes.json  20250729_170249_code_nodes.json  20250729_170249_functions.json  20250729_170249_modules.json  20250729_170249_relationships.json
repo_qa_generator/: __init__.py  generate_questions.py  test_sliding_windows_rag.py
score/: evaluator.py
src/: main.py
utils/: load.py
(+149 files in other folders)
